--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
